<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="240dp"
            android:layout_height="236dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/main_menu_big_0" />

        <Button
            android:id="@+id/button1Sights"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_gravity="top|left"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/button_main_menu_culture"
            android:paddingTop="60dp"
            android:text="@string/button_main_menu_culture"
            android:textColor="@color/main_menu_sight_button_text_selector"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/button2CityMap"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"
            android:layout_marginRight="18dp"
            android:layout_marginTop="65dp"
            android:background="@android:color/transparent"
            android:paddingTop="50dp"
            android:text="@string/button_main_menu_map"
            android:textColor="@color/main_menu_map_button_text_selector"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/button3Walks"
            android:layout_width="104dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"
            android:paddingTop="55dp"
            android:text="@string/button_main_walks"
            android:textColor="@color/main_menu_walk_button_text_selector"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <com.flaxtreme.gominsktestapp.view.RobotoRegularTextView
            android:id="@+id/MapButtonTextView"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="26dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/button_main_menu_map"
            android:textColor="#12204c"
            android:textSize="18dp"
            android:visibility="gone" />

         <com.flaxtreme.gominsktestapp.view.RobotoRegularTextView
             android:id="@+id/SightButtonTextView"
             android:layout_width="81dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="27dp"
             android:layout_marginTop="70dp"
             android:gravity="center"
             android:text="@string/button_main_menu_culture"
             android:textColor="#12204c"
             android:textSize="18dp"
             android:visibility="gone" />

         <com.flaxtreme.gominsktestapp.view.RobotoRegularTextView
             android:id="@+id/WalkButtonTextView"
             android:layout_width="92dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="23dp"
             android:layout_marginTop="84dp"
             android:gravity="center"
             android:text="@string/button_main_walks"
             android:textColor="#12204c"
             android:textSize="18dp"
             android:visibility="gone" />
        
    </FrameLayout>